<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main" >

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="40dp" >

        <ImageButton
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@drawable/menu_item_selector"
            android:contentDescription="@string/app_name"
            android:onClick="gotoHome"
            android:src="@drawable/home" />

        <ImageButton
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/menu_item_selector"
            android:contentDescription="@string/app_name"
            android:onClick="manageInterest"
            android:src="@drawable/calculator" />

        <ImageButton
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/menu_item_selector"
            android:contentDescription="@string/app_name"
            android:src="@drawable/info" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/main_header"
                android:minHeight="65dp" >

                <TextView
                    android:id="@+id/title1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/blue_back_right"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="20dp"
                    android:paddingTop="5dp"
                    android:text="@string/act_smart"
                    android:textColor="#ffffffff"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/message1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/title1"
                    android:layout_marginTop="3dp"
                    android:text="@string/manage_home_loan"
                    android:textColor="#FFFFFF"
                    android:textSize="13sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/main_header"
                android:minHeight="65dp"
                android:layout_marginTop="3dp" >

                <TextView
                    android:id="@+id/title2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/blue_back_right"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="20dp"
                    android:paddingTop="5dp"
                    android:text="@string/act_smart"
                    android:textColor="#ffffffff"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/message2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/title2"
                    android:layout_marginTop="3dp"
                    android:text="@string/manage_home_loan"
                    android:textColor="#FFFFFF"
                    android:textSize="13sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/main_header"
                android:minHeight="65dp"
                android:layout_marginTop="3dp" >

                <TextView
                    android:id="@+id/title3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/blue_back_right"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="20dp"
                    android:paddingTop="5dp"
                    android:text="@string/act_smart"
                    android:textColor="#ffffffff"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/message3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/title3"
                    android:layout_marginTop="3dp"
                    android:text="@string/manage_home_loan"
                    android:textColor="#FFFFFF"
                    android:textSize="13sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/main_header"
                android:minHeight="65dp"
                android:layout_marginTop="3dp" >

                <TextView
                    android:id="@+id/title4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/blue_back_right"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="20dp"
                    android:paddingTop="5dp"
                    android:text="@string/act_smart"
                    android:textColor="#ffffffff"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/message4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/title4"
                    android:layout_marginTop="3dp"
                    android:text="@string/manage_home_loan"
                    android:textColor="#FFFFFF"
                    android:textSize="13sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/main_header"
                android:minHeight="65dp"
                android:layout_marginTop="3dp" >

                <TextView
                    android:id="@+id/title5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/blue_back_right"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="20dp"
                    android:paddingTop="5dp"
                    android:text="@string/act_smart"
                    android:textColor="#ffffffff"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/message5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/title5"
                    android:layout_marginTop="3dp"
                    android:text="@string/manage_home_loan"
                    android:textColor="#FFFFFF"
                    android:textSize="13sp" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>